--- a/belajarpython.ipynb
+++ b/belajarpython.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOMT2t08kkaeJpvZ0G5rD0l",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOwLDsrsNm56AWMYMPbm7En",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,22 +53,22 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"Hallo Hamka Ganteng \")"
+        "print(\"Hallo Hamka keren \")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "b3rW1UCZX0lH",
-        "outputId": "4b120b8a-32d4-4845-d486-8f3e44843a87"
+        "outputId": "ccf1e0bc-e785-44d5-8ab3-7eb007d1870f"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hallo Hamka Ganteng\n"
+            "Hallo Hamka keren \n"
           ]
         }
       ]
@@ -85,8 +86,8 @@
       "cell_type": "code",
       "source": [
         "nama = \"Hamka\"\n",
-        "umur = 24\n",
-        "tinggi = 165.5\n",
+        "umur = 22\n",
+        "tinggi = 170.5\n",
         "\n",
         "print(\"nama:\" ,nama)\n",
         "print(\"Umur:\", umur)\n",
@@ -102,18 +103,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tmzCvhdLZzAm",
-        "outputId": "ab39bf01-0415-4777-d893-d7c639b572fc"
+        "outputId": "2427ed77-ebc7-4296-9336-d2124803cf70"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "nama: Hamka\n",
-            "Umur: 24\n",
-            "Tinggi: 165.5\n",
-            "Hamka 24 165.5\n",
+            "Umur: 22\n",
+            "Tinggi: 170.5\n",
+            "Hamka 22 170.5\n",
             "<class 'float'>\n"
           ]
         }
@@ -239,13 +240,230 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "##String dan Manifulasi String"
+      ],
       "metadata": {
-        "id": "lfQsqY_mi_gV"
+        "id": "J8ch2rC7AXBR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nama = \"hamka\"\n",
+        "umur = 22\n",
+        "\n",
+        "#cara salah, type data tidak sama semua\n",
+        "#pesan = \"nama saya\" + nama + \"umur saya\" + umur\n",
+        "\n",
+        "#cara benar, type data disamakan dulu\n",
+        "pesan = \"nama saya \" + nama + \", umur saya \" + str(umur)\n",
+        "print(pesan)"
+      ],
+      "metadata": {
+        "id": "lfQsqY_mi_gV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6c4f3a1b-bcf0-4ccc-fd77-d879c873fc39"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "nama saya hamka, umur saya 22\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###len() penggunakan penghitung karakter\n"
+      ],
+      "metadata": {
+        "id": "YueuhTOOEBpc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#gaya penulisan 1\n",
+        "panjang_nama = len(nama)\n",
+        "panjang_pesan = len(pesan)\n",
+        "\n",
+        "print(panjang_nama)\n",
+        "print(panjang_pesan)\n",
+        "\n",
+        "#gaya penulisan ke 2\n",
+        "\n",
+        "#print(len(nama))\n",
+        "#print(len(pesan))\n",
+        "\n",
+        "\n",
+        "#hasil 5 dan 29\n",
+        "#karena panjangan karakternya ada 5 = hamka dan 29 = nama saya hamka, umur saya 22\n",
+        "#dihitung dengan spacenya"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0T5ccwG7Ay1d",
+        "outputId": "8b467551-245a-4875-f1b5-85686f0e94f9"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "29\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "String Indexing/mengambil karakter"
+      ],
+      "metadata": {
+        "id": "Nbezz-8CEnYG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nama = \"python\"\n",
+        "\n",
+        "#Gaya pengambilan dari kiri ke kanan\n",
+        "print(nama[0])\n",
+        "print(nama[2])\n",
+        "\n",
+        "#Gaya pengambilan dari kanan ke kiri\n",
+        "print(nama[-1])\n",
+        "print(nama[-3])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K3fEEwVmEzoG",
+        "outputId": "b3541665-a367-47e9-95bf-4ca744bc3007"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "p\n",
+            "t\n",
+            "n\n",
+            "h\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###String sciling/Mengambil sebagian karakter"
+      ],
+      "metadata": {
+        "id": "8tce_LVdFvPb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nama = \"python\"\n",
+        "\n",
+        "#Gaya dari kiri ke kanan\n",
+        "print(nama[0:3])\n",
+        "print(nama[:]) #mengambil seluruh"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_4H03amxF2gC",
+        "outputId": "dcf6feb3-825b-433e-f706-1427baa76143"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "pyt\n",
+            "python\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###String Methods (fungsi string)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "LMHOGtqEHHxj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "fungsi string memiliki method(fungsi yang menempel pada type data) ada banyak sekali fungsi method yang bisa di gunakan, seperti\n",
+        "\n",
+        "*   upper()\n",
+        "*   lower()\n",
+        "*   title()\n",
+        "*   find() dst"
+      ],
+      "metadata": {
+        "id": "aK7AIiTrHXlp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#contoh\n",
+        "name = \"Hamka\"\n",
+        "\n",
+        "#penggunakan upper\n",
+        "name_upper = nama.upper()\n",
+        "print(name_upper)\n",
+        "\n",
+        "#penggunakan lower\n",
+        "name_lower = name.lower()\n",
+        "print(name_lower)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Kh70VBJxHHdu",
+        "outputId": "c1841d5b-085b-461f-b7ca-21d0b5b0e7bf"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "PYTHON\n",
+            "hamka\n"
+          ]
+        }
+      ]
     }
   ]
 }
