--- a/belajarpython.ipynb
+++ b/belajarpython.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOwLDsrsNm56AWMYMPbm7En",
+      "authorship_tag": "ABX9TyOETpAFoIqTfaEREHX3VLkm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -464,6 +464,110 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Escape Karakter"
+      ],
+      "metadata": {
+        "id": "0lTgZqw9R2FI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*   \\n (new line)\n",
+        "*   \\t (tab)\n",
+        "* \\ (backslash)\n",
+        "* \" dan ' (kutip dalam string), perlu menambahkan slash di awal"
+      ],
+      "metadata": {
+        "id": "BydyTKkkR76Q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#contoh\n",
+        "\n",
+        "#new line\n",
+        "kalimat = \"Baris pertama\\nBaris kedua\"\n",
+        "print(kalimat)\n",
+        "\n",
+        "print(\"\\n\")\n",
+        "\n",
+        "#tab\n",
+        "kalimat = \"Nama:\\t Hamka\\numur:\\t 22\"\n",
+        "print(kalimat)\n",
+        "\n",
+        "print('\\n')\n",
+        "\n",
+        "#slash\n",
+        "lokasi = \"c:\\\\User\\\\hamka\\\\destop\"# Jumlah slash tergantung kebutuhan\n",
+        "print(lokasi)\n",
+        "\n",
+        "print(\"\\n\")\n",
+        "\n",
+        "#penggunakan kutip 2 \"\" di tengah kalimat\n",
+        "kalimat = \"Dia berkata \\\"Hallo\\\"  kepada saya\"\n",
+        "print(kalimat)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-pMDmTnmR7oz",
+        "outputId": "7f2dbb07-1b75-4b23-bd12-4d476ad389d9"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Baris pertama\n",
+            "Baris kedua\n",
+            "\n",
+            "\n",
+            "Nama:\t Hamka\n",
+            "umur:\t 22\n",
+            "\n",
+            "\n",
+            "c:\\User\\hamka\\destop\n",
+            "\n",
+            "\n",
+            "Dia berkata \"Hallo\"  kepada saya\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###String Interpolation"
+      ],
+      "metadata": {
+        "id": "waaEK0iYdXg6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "adalah cara menggabungkan string yang lebih modern kaya \"+\""
+      ],
+      "metadata": {
+        "id": "trqrf9GUdefv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "7PKeCMDidqD4"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
