--- a/belajarpython.ipynb
+++ b/belajarpython.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOETpAFoIqTfaEREHX3VLkm",
+      "authorship_tag": "ABX9TyN1PZ+2AY2StlBPLFh+xepe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -562,9 +562,162 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "\n",
+        "nama = \"hamka\"\n",
+        "umur = 22\n",
+        "kota = \"jakarta\"\n",
+        "\n",
+        "#penggunaan interpolation\n",
+        "kalimat = f\"nama saya {nama}, umur saya{umur} dan tinggal di {kota}\" #lebih simple\n",
+        "print(kalimat)\n",
+        "\n",
+        "print(\"\\n\")\n",
+        "\n",
+        "#menggunakan \"+\" plus\n",
+        "kalimat_lama = \"nama saya, \" + nama + \" umur saya\" + str(umur) + \"dan tinggal di \" + kota\n",
+        "print(kalimat_lama)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7PKeCMDidqD4",
+        "outputId": "98f0eca8-761e-4923-c84a-80784070813b"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "nama saya hamka, umur saya22 dan tinggal di jakarta\n",
+            "\n",
+            "\n",
+            "nama saya, hamka umur saya22dan tinggal di jakarta\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### f-string dengan Expressions"
+      ],
+      "metadata": {
+        "id": "n3QZstuanPjp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " harga = 10000\n",
+        " jumlah = 3\n",
+        "\n",
+        "#operasi matematika dalam string\n",
+        " total = f\"Total: Rp {harga * jumlah:,}\"\n",
+        " print(total)\n",
+        "\n",
+        " print(\"\\n\")\n",
+        "\n",
+        "#method call dalam f-string\n",
+        "nama = \"lukman prasetio\"\n",
+        "kalimat = f\"Hallo {nama.upper()}\"\n",
+        "print(kalimat)\n",
+        "\n",
+        "\n",
+        "print(\"\\n\")\n",
+        "\n",
+        "kalimat = f\"Hallo {nama.lower()}\"\n",
+        "print(kalimat)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Z6TmW9KNmhOh",
+        "outputId": "e983141a-05b8-40c9-ef25-23a5f0c3ec83"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Total: Rp 30,000\n",
+            "\n",
+            "\n",
+            "Hallo LUKMAN PRASETIO\n",
+            "\n",
+            "\n",
+            "Hallo lukman prasetio\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Operator"
+      ],
+      "metadata": {
+        "id": "9HMd1R8Ard1H"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "a = 10\n",
+        "b = 3\n",
+        "\n",
+        "#plus\n",
+        "print(a+b)\n",
+        "\n",
+        "#minus\n",
+        "print(a-b)\n",
+        "\n",
+        "#time\n",
+        "print(a*b)\n",
+        "\n",
+        "#division\n",
+        "print(a/3)\n",
+        "\n",
+        "#Pembagian bulat\n",
+        "print(a//b)\n",
+        "\n",
+        "#modulo\n",
+        "print(a%b)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V3avwSAso-_X",
+        "outputId": "1f5e724b-b5c5-45ea-c223-b85d941f2dc7"
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "13\n",
+            "7\n",
+            "30\n",
+            "3.3333333333333335\n",
+            "3\n",
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "7PKeCMDidqD4"
+        "id": "yKzYVaPgr1kT"
       },
       "execution_count": null,
       "outputs": []
