--- a/belajarpython.ipynb
+++ b/belajarpython.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN1PZ+2AY2StlBPLFh+xepe",
+      "authorship_tag": "ABX9TyPzmyp2ggx0vadYQ+MA9HmK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +62,7 @@
         "id": "b3rW1UCZX0lH",
         "outputId": "ccf1e0bc-e785-44d5-8ab3-7eb007d1870f"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,7 +105,7 @@
         "id": "tmzCvhdLZzAm",
         "outputId": "2427ed77-ebc7-4296-9336-d2124803cf70"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -268,7 +268,7 @@
         },
         "outputId": "6c4f3a1b-bcf0-4ccc-fd77-d879c873fc39"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -315,7 +315,7 @@
         "id": "0T5ccwG7Ay1d",
         "outputId": "8b467551-245a-4875-f1b5-85686f0e94f9"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -356,7 +356,7 @@
         "id": "K3fEEwVmEzoG",
         "outputId": "b3541665-a367-47e9-95bf-4ca744bc3007"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -395,7 +395,7 @@
         "id": "_4H03amxF2gC",
         "outputId": "dcf6feb3-825b-433e-f706-1427baa76143"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -453,7 +453,7 @@
         "id": "Kh70VBJxHHdu",
         "outputId": "c1841d5b-085b-461f-b7ca-21d0b5b0e7bf"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -520,7 +520,7 @@
         "id": "-pMDmTnmR7oz",
         "outputId": "7f2dbb07-1b75-4b23-bd12-4d476ad389d9"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -545,7 +545,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###String Interpolation"
+        "###String Interpolation (f-string)"
       ],
       "metadata": {
         "id": "waaEK0iYdXg6"
@@ -586,7 +586,7 @@
         "id": "7PKeCMDidqD4",
         "outputId": "98f0eca8-761e-4923-c84a-80784070813b"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -637,9 +637,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z6TmW9KNmhOh",
-        "outputId": "e983141a-05b8-40c9-ef25-23a5f0c3ec83"
+        "outputId": "7d9b40ba-f309-45bb-a6c7-71307a28c87b"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -666,6 +666,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Operator aritmatika"
+      ],
+      "metadata": {
+        "id": "dAGV0E7TwfOP"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "\n",
@@ -688,16 +697,19 @@
         "print(a//b)\n",
         "\n",
         "#modulo\n",
-        "print(a%b)\n"
+        "print(a%b)\n",
+        "\n",
+        "#pangkat\n",
+        "print(a**b)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "V3avwSAso-_X",
-        "outputId": "1f5e724b-b5c5-45ea-c223-b85d941f2dc7"
+        "outputId": "f22d6a9f-e26a-48c4-c54c-6082bdcb1e66"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -708,16 +720,410 @@
             "30\n",
             "3.3333333333333335\n",
             "3\n",
-            "1\n"
+            "1\n",
+            "1000\n"
           ]
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Operator assignment (penugasan)"
+      ],
+      "metadata": {
+        "id": "xzC7w-oLwCy-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####Operator assignment"
+      ],
+      "metadata": {
+        "id": "7xc1bRihx9yo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Operator assignment diberikan untuk memberikan nilai variabel, sama dengan (=)\n",
+        "#contoh\n",
+        "\n",
+        "x = 10\n",
+        "\n",
+        "print(\"x awal:\", x)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3LFbekjayRaA",
+        "outputId": "3b342ea9-019c-4d3c-d67d-d72ec2f466a3"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x awal: 10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####Compound assignment"
+      ],
+      "metadata": {
+        "id": "NeG1ZiXKxzri"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Compound assignment yaitu yang menggabungkan operasi aritmatika menjadi assignment\n",
+        "\n",
+        "x = 10\n",
+        "\n",
+        "x += 5 #sama dengan x = x + 5\n",
+        "print(\"x setelah += 5:\", x)\n",
+        "\n",
+        "y = 10\n",
+        "\n",
+        "y /= 2 #sama dengan y = y / 2\n",
+        "print(\"x setelah /= 2:\", y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kmotkAtcy9wK",
+        "outputId": "03020633-475a-4582-fa66-bcb44f2124f0"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x setelah += 5: 15\n",
+            "x setelah /= 2: 5.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####Operator pebandingan"
+      ],
+      "metadata": {
+        "id": "rdumziR8mn4l"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#contoh int\n",
+        "a = 10\n",
+        "b = 3\n",
+        "\n",
+        "print(a < b)\n",
+        "print(a > b)\n",
+        "print(a == b)\n",
+        "print(a <= b)\n",
+        "print(a >= b)\n",
+        "print(a != b)\n",
+        "\n",
+        "print(\"\\n\")\n",
+        "\n",
+        "#contoh string\n",
+        "nama1 = \"hamka\"\n",
+        "nama2 = \"wawan\"\n",
+        "nama3 = \"hamka\"\n",
+        "\n",
+        "print(nama1 == nama3)\n",
+        "print(nama1 == nama2)\n",
+        "print(nama1 != nama2)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aHeIupB8UmZZ",
+        "outputId": "fdb5cedd-0fc8-43db-a705-30e4b034806c"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n",
+            "True\n",
+            "False\n",
+            "False\n",
+            "True\n",
+            "True\n",
+            "\n",
+            "\n",
+            "True\n",
+            "False\n",
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####Oprator logika"
+      ],
+      "metadata": {
+        "id": "DVtzqliVoCTS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- adalah operator logika yang digunakan untuk mmenggabungkan atau memodifikasi nilai boolean\n",
+        "- and (dan), menghasilakan true. jika kondisi kedua benar\n",
+        "- or (atau), menghasilkan True. jika kondisi salah satu benar\n",
+        "not (tidak), membalikan nilai boolean\n"
+      ],
+      "metadata": {
+        "id": "ubnwDzP9oHI5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#and\n",
+        "umur = 25\n",
+        "print(umur > 20 and umur < 27)\n",
+        "\n",
+        "#or\n",
+        "hari = \"sabtu\"\n",
+        "print(hari == \"sabtu\" or hari != \"minggu\")\n",
+        "\n",
+        "#not\n",
+        "aktif = True\n",
+        "print(not aktif)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ggzwy3-eoFJ3",
+        "outputId": "119a3896-7113-4e92-8c46-daeb1b1ff724"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####Operator String"
+      ],
+      "metadata": {
+        "id": "-Gw-aYKYr4zy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Operator khusu untuk bekarja dengan string\n",
+        "- concatenation (+), manambah string\n",
+        "- Repetition(*), mengulang string sejumlah angka\n",
+        "- Membership(in), mengecek apakah text ada dalam string"
+      ],
+      "metadata": {
+        "id": "pP7bMxRxr9PK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#concatenation\n",
+        "nama_depan = \"johan\"\n",
+        "nama_belakang = \"permana\"\n",
+        "nama_lengkap = nama_depan + \" \" + nama_belakang\n",
+        "\n",
+        "print(nama_lengkap)\n",
+        "\n",
+        "print(\"\\n\")\n",
+        "\n",
+        "#Repetition\n",
+        "kata =\"Hallo\"\n",
+        "print(kata *3)\n",
+        "\n",
+        "garis = \"-\"\n",
+        "print(garis*15)\n",
+        "\n",
+        "print(\"\\n\")\n",
+        "\n",
+        "#Membership\n",
+        "kalimat = \" apakah python adalah bahasa pemrograman\"\n",
+        "\n",
+        "print(\"python\" in kalimat) #true\n",
+        "print(\"hamka\" in kalimat)  #false\n",
+        "print(\"bahasa\" in kalimat) #true\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "usJ1KJDwsanl",
+        "outputId": "78f64f8f-f899-462c-e146-495e01788f5d"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "johan permana\n",
+            "\n",
+            "\n",
+            "HalloHalloHallo\n",
+            "---------------\n",
+            "\n",
+            "\n",
+            "True\n",
+            "False\n",
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####Prioritas Operator"
+      ],
+      "metadata": {
+        "id": "_IVq_QN8unUw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Operator memiliki urutan prioritas. Operator dengan prioritas lebih tinggi akan dieksekusi terlebih dahulu\n",
+        "- Urutan Prioritas dari tinggi ke rendah\n",
+        "\n",
+        "- ** (Pangkat)\n",
+        "- *,/,//,% (perkalian, pembagian, dll)\n",
+        "- ==, !=, <, >, <=, >= (perbandingan, dll)\n",
+        "- not (logika not)\n",
+        "- and (logika and)\n",
+        "- or (logika)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "YJ5RGeNMuq-6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Perbandingan"
+      ],
+      "metadata": {
+        "id": "Mmu4Ffg7wYSE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####Perbandingan IF, IF ELSE dan ELIF"
+      ],
+      "metadata": {
+        "id": "wOSVBm1W0cDA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "#setelah if/else harus ada : (titik dua)\n",
+        "\n",
+        "#if\n",
+        "#satu kondisi\n",
+        "nilai = int(input(\"masukan nilai: \"))\n",
+        "if nilai > 75:\n",
+        "    print(f\" Anda lulus dengan nilai: {nilai} \")\n",
+        "\n",
+        "#if dan else\n",
+        "#dua kondisi\n",
+        "if nilai > 75:\n",
+        "    print(f\"nilai {nilai} lebih dari KKM\")\n",
+        "else:\n",
+        "    print(f\"Nilai {nilai} kurang dari KKM\")\n",
+        "\n",
+        "#elif\n",
+        "#beberapa kondisi\n",
+        "nilai = int(input(\"Masukan nilai:\"))\n",
+        "\n",
+        "if nilai >= 85:\n",
+        "    print(\"nilai anda A\")\n",
+        "elif nilai >= 75:\n",
+        "    print(\"nilai anda B\")\n",
+        "elif nilai >= 65:\n",
+        "    print(\"nilai anda C\")\n",
+        "else:\n",
+        "    print(\"nilai anda D\")\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0MAvJ_Mxsm72",
+        "outputId": "a15b925a-3512-476a-93bc-29cda4d65603"
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Masukan nilai:30\n",
+            "nilai anda D\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Kondisi dengan Operator logika"
+      ],
+      "metadata": {
+        "id": "kylyskpq0qMA"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "yKzYVaPgr1kT"
+        "id": "ZAm8kr43wy2g"
       },
       "execution_count": null,
       "outputs": []
